# ESP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  Todo.txt  _e_s_p_8h.html  _e_s_p_8h.js  _e_s_p_8h_source.html  _filter_8cpp.html  _filter_8h.html  _filter_8h_source.html  _m_f_c_c_8cpp.html  _m_f_c_c_8h.html  _m_f_c_c_8h_source.html  _preprocessing_modules_examples_2_filter_example_2_filter_example_8cpp-example.html  _threshold_detection_8cpp.html  _threshold_detection_8h.html  _threshold_detection_8h_source.html  annotated.html  annotated_dup.js  bug.html  calibrator_8cpp.html  calibrator_8cpp.js  calibrator_8h.html  calibrator_8h.js  calibrator_8h_source.html  class_a_s_c_i_i_serial_stream-members.html  class_a_s_c_i_i_serial_stream.html  class_a_s_c_i_i_serial_stream.js  class_audio_file_stream-members.html  class_audio_file_stream.html  class_audio_file_stream.js  class_audio_stream-members.html  class_audio_stream.html  class_audio_stream.js  class_base_serial_input_stream-members.html  class_base_serial_input_stream.html  class_base_serial_input_stream.js  (+328 more)
Arduino/ADXL335/: ADXL335.ino
Arduino/ADXL335_LEDs/: ADXL335_LEDs.ino
Arduino/Arduino101_Accelerometer/: Arduino101_Accelerometer.ino
Arduino/Arduino101_Accelerometer_100Hz/: Arduino101_Accelerometer_100Hz.ino
Arduino/Arduino101_IMU/: Arduino101_IMU.ino
Arduino/Arduino_sensing/: Arduino_sensing.ino
Arduino/CapacitiveSensing-MPR121/: CapacitiveSensing-MPR121.ino
Arduino/ColorSensor/: ColorSensor.ino
Arduino/ColorSensor_SparkFun_ISL29125/: ColorSensor_SparkFun_ISL29125.ino
Arduino/ElectretMicrophone/: ElectretMicrophone.ino
Arduino/GRT_ANBC/: GRT_ANBC.ino  model.h  modelold.h  modelold2.h
Arduino/GRT_ColorSensor/: GRT_ColorSensor.ino  classifier.h  pipeline.h
Arduino/GRT_KNN2/: GRT_KNN2.ino
Arduino/GRT_KNN_Example/: GRT_KNN_Example.ino  data.h
Arduino/Touche/: SendData.ino  Touche.ino
Arduino/Touche_LEDs/: Touche_LEDs.ino
Arduino/hardware/mellis/sam/: boards.txt  platform.local.txt
Arduino/libraries/Adafruit_MPR121/: library.properties
Arduino/libraries/Adafruit_MPR121/examples/MPR121test/: MPR121test.ino
Arduino/libraries/Adafruit_TCS34725/: Adafruit_TCS34725.cpp
Arduino/libraries/SparkFun_ISL29125_Breakout/: README.md  library.properties
Arduino/libraries/SparkFun_ISL29125_Breakout/examples/ISL29125Basics/: ISL29125Basics.ino
Arduino/libraries/SparkFun_ISL29125_Breakout/examples/ISL29125Interrupts/: ISL29125Interrupts.ino
Arduino/libraries/SparkFun_ISL29125_Breakout/src/: SparkFunISL29125.cpp  SparkFunISL29125.h
Processing/Asteroids/: Asteroids.pde
Processing/BallDrop/: BallDrop.pde
Processing/SensorClassificationExampleKNN/: SensorClassificationExampleKNN.pde
Processing/SensorClassificationExampleKNN/data/: classes.json
Processing/SensorClassificationExampleKNN/data/ArduinoKNN/: ArduinoKNN.ino  KNN.ino  TimeDomainFeatures.ino  data.h
Xcode/Audio/: Makefile  Project.xcconfig  addons.make  config.make
Xcode/Audio/Audio.xcodeproj/: project.pbxproj
Xcode/Audio/Audio.xcodeproj/xcshareddata/xcschemes/: Audio Debug.xcscheme  (+1 more)
Xcode/Audio/src/: istream.cpp  istream.h  main.cpp  ofApp.cpp  ofApp.h  user.h  user_accelerometer_gestures.h  user_adxl335_accelerometer.h  user_audio_beat.h  user_color_sensor.h
Xcode/ESP/: .gitignore  Doxyfile  ESP.sln  ESP.vcxproj  ESP.vcxproj.filters  ESPlib.vcxproj  Info.plist  Project.xcconfig  addons.make  config.make  libgrt.dylib  openFrameworks-Info.plist
Xcode/ESP/ESP.xcodeproj/: project.pbxproj
Xcode/ESP/src/: ESP.h  Filter.cpp  Filter.h  MFCC.cpp  MFCC.h  ThresholdDetection.cpp  ThresholdDetection.h  calibrator.cpp  calibrator.h  cli.cpp  iostream.cpp  iostream.h  istream.cpp  istream.h  main.cpp  matplotlibcpp.h  ofApp.cpp  ofApp.h  ofConsoleFileLoggerChannel.cpp  ofConsoleFileLoggerChannel.h  ofYesNoDialog.cpp  ofYesNoDialog.h  ofxGrtSettings.cpp  ostream.cpp  ostream.h  plotter.cpp  plotter.h  stream.h  training-data-manager-test.cpp  training-data-manager.cpp  training-data-manager.h  training.cpp  training.h  tuneable.cpp  tuneable.h  user.cpp  user.h  user_accelerometer_gestures.h  user_audio_beat.h  user_capacitive_sensing.h  (+2 more)
Xcode/ESP/src/examples/: user_accelerometer_gestures.cpp  user_accelerometer_gestures_osc.cpp  user_accelerometer_gestures_simple.cpp  user_accelerometer_poses.cpp  user_accelerometer_step_counting.cpp  user_accelerometer_walk_detection.cpp  user_audio.cpp  user_audio_beat.cpp  user_audio_beat_detection.cpp  user_capacitive_sensing.cpp  user_color_sensor.cpp  user_gdp_test.cpp  user_speaker.cpp  user_speech_detection.cpp  user_sudden_motion.cpp  user_terraswarm_demo.cpp  user_touche.cpp
Xcode/GUI/: Makefile  Project.xcconfig  config.make
Xcode/GUI/GUI.xcodeproj/: project.pbxproj
Xcode/GUI/src/: ofApp.cpp  ofApp.h  user.h
Xcode/SmartSensors/: Makefile  addons.make
Xcode/SmartSensors/SmartSensors.xcodeproj/: project.pbxproj
Xcode/SmartSensors/src/: Calibrator.cpp  Calibrator.h  SmartSensors.h  calibrator.h  istream.cpp  istream.h  main.cpp  ofApp.cpp  ofApp.h  ostream.cpp  ostream.h  plotter.cpp  plotter.h  tuneable.cpp  tuneable.h  user.h  user_accelerometer_calibration.h  user_accelerometer_gestures.h  user_accelerometer_poses.h  user_adxl335_accelerometer.h  user_audio_beat.h  user_capacitive_sensing.h  user_color_sensor.h
cmake/: DetectArch.cmake  FindCairo.cmake  FindFontconfig.cmake  FindGLFW.cmake  FindGLib.cmake  FindGObject.cmake  FindGStreamer.cmake  FindGrt.cmake  FindOpenFrameworks.cmake  FindPoco.cmake  FindRtAudio.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+77 more)
serial-to-gdp/: index.js  package.json
(+10 files in other folders)
